Avoid setting large z-index on headers
Bug: T340747

--- a/resources/skins.vector.zebra.styles/variables.less
+++ b/resources/skins.vector.zebra.styles/variables.less
@@ -139,10 +139,7 @@
 
 // Z-indices
 // See Codex tokens https://doc.wikimedia.org/codex/latest/design-tokens/z-index.html
-
-// Header z-index-header with 200 in Codex higher than @z-index-dropdown so that search results
-// overlay variants and more menu
-@z-index-header: @z-index-fixed;
+@z-index-header: @z-index-stacking-3;
 @z-index-search-button: @z-index-stacking-1;
 // Ensure that this is displayed on top of .vector-body and clickable.
 @z-index-indicators: @z-index-stacking-1;
